02 modificação dos iniciais

--- a/minha pagina html.html
+++ b/minha pagina html.html
@@ -48,7 +48,7 @@
 		</div>
 		<a href="https://www.facebook.com/joaopedro.barros.3532?ref=bookmarks"><img src="facebook.png" class="imagens-contato"></a>
 		<a href="https://www.instagram.com/jp_barros01/"><img src="instagram.png" class="imagens-contato"></a>
-		<a href="https://api.whatsapp.com/send?phone=5584991281160"><img src="Whatsapp.png" class="imagens-contato"></a>
+		<a href="https://api.whatsapp.com/send?phone=5584991281160"><img src="WhatsApp.png" class="imagens-contato"></a>
 
 	</section>
 	
